# bc-concurrency

./: .gitignore  CHANGELOG.md  README.md  cppcheck-suppressions.txt  meson.build  valgrind.supp
.claude/: CLAUDE.md
.github/workflows/: ci.yml
benchmarks/: bench_bc_concurrency_batch_throughput.c  bench_bc_concurrency_main_contribution.c  bench_bc_concurrency_parallel_for.c  bench_bc_concurrency_scalability.c  bench_bc_concurrency_slot_accumulation.c  bench_bc_concurrency_submit_wait_roundtrip.c  bench_bc_concurrency_wave_throughput.c  meson.build
debian/: changelog  control  copyright
fuzzing/: fuzz_bc_concurrency_dispatch.c  fuzz_bc_concurrency_queue.c  meson.build
include/internal/: bc_concurrency_context_internal.h  bc_concurrency_platform_internal.h
include/public/: bc_concurrency.h  bc_concurrency_signal.h
src/: meson.build
src/context/: bc_concurrency.c
src/dispatch/: bc_concurrency_async.c
src/platform/: bc_concurrency_platform.c
src/queue/: bc_concurrency_queue.c
src/signal/: bc_concurrency_signal.c
tests/: meson.build  test_bc_concurrency_async.c  test_bc_concurrency_context_slots.c  test_bc_concurrency_errors.c  test_bc_concurrency_errors_v2.c  test_bc_concurrency_lifecycle.c  test_bc_concurrency_main_participation.c  test_bc_concurrency_physical_isolation.c  test_bc_concurrency_queue.c  test_bc_concurrency_signal.c  test_bc_concurrency_slot_sync.c  test_bc_concurrency_submit_wait.c  test_bc_concurrency_worker_count_configurable.c  test_bc_concurrency_worker_layout.c  test_bc_concurrency_worker_resources.c
